# Grape-leaf-disease-detection

./: .streamlitignore  .vercelignore  Dockerfile  RAILWAY_VERCEL_DEPLOYMENT.md  README_BACKEND.md  README_FRONTEND.md  STREAMLIT_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  app.py  deploy-setup.md  env.example  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  vercel.json
.streamlit/: config.toml  secrets.toml
api/: predict.py  requirements.txt
repo-mirror/: config
static/: config.js
templates/: index.html
